fixed-photos-arrangement

--- a/principal.html
+++ b/principal.html
@@ -4,7 +4,7 @@
         <title>The Mercedes Custom Company</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" type="text/css" href=".\hoja estilo.css">
-        <link rel="shortcut icon" href="SINFONDO.ico">
+        <link rel="shortcut icon" href="./fotos/SINFONDO.ico">
         <meta charset="utf-8">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -117,7 +117,7 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <main>
     <a  name="arriba"></a>
-        <img src="mercedescustom.ico" style="width: 120px; height: 120px; float: left; padding-left: 40px; padding-right:40px; padding-top: 20px;"><br><br><br><h1 class="subrayar">The Mercedes Custom Company</h1>
+        <img src="./fotos/mercedescustom.ico" style="width: 120px; height: 120px; float: left; padding-left: 40px; padding-right:40px; padding-top: 20px;"><br><br><br><h1 class="subrayar">The Mercedes Custom Company</h1>
         
         <p class="right margend">© 2023 Esta es la página de modificaciones especiales de Mercedes-Benz</p>
         <br>
@@ -154,7 +154,7 @@
 
         <center>
         <br><a name="foto"></a><p style="padding-top:15px;"class="red"> Aquí podrás encontrar algunas imágenes del nuevo <span class="sub">Mercedes-Benz</span></center><center>
-          <a href="https://www.mercedes-benz.es/passengercars/campaigns/a-class/22-2.html"> <img id="presentation" src="coche2.jpg" style="width:850px; height: 400px; padding: 10px; border: 10px solid red;"></a></center></p>
+          <a href="https://www.mercedes-benz.es/passengercars/campaigns/a-class/22-2.html"> <img id="presentation" src="./fotos/coche2.jpg" style="width:850px; height: 400px; padding: 10px; border: 10px solid red;"></a></center></p>
           <br><a name="ber"></a>
           <h1 class="subrayar" style="font-size: 40px; text-align: center;">Vehículos Personalizables</h1>
 
@@ -164,17 +164,17 @@
                 <input class="slide-open" type="radio" id="slide-1" 
                       name="slide" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item">
-                    <center><img onmouseover="escribe(2)" onmouseout="escribe(0)" id="berlina2" src="berlina2.png" style="width:590px; height: 370px;"></center>
+                    <center><img onmouseover="escribe(2)" onmouseout="escribe(0)" id="berlina2" src="./fotos/berlina2.png" style="width:590px; height: 370px;"></center>
                 </div>
                 <input class="slide-open" type="radio" id="slide-2" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <center><img onmouseover="escribe(1)" onmouseout="escribe(0)" id="berlina3" src="berlina3.png" style="width:555px; height: 350px;"></center>
+                    <center><img onmouseover="escribe(1)" onmouseout="escribe(0)" id="berlina3" src="./fotos/berlina3.png" style="width:555px; height: 350px;"></center>
                 </div>
                 <input class="slide-open" type="radio" id="slide-3" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <center><img onmouseover="escribe(3)" onmouseout="escribe(0)" id="berlina4" src="berlina 4.png" style="width:600px; height: 350px;"></center>
+                    <center><img onmouseover="escribe(3)" onmouseout="escribe(0)" id="berlina4" src="./fotos/berlina 4.png" style="width:600px; height: 350px;"></center>
                 </div>
                 <br>
 
@@ -207,17 +207,17 @@
                 <input class="slide-open1" type="radio" id="slide-11" 
                       name="slide1" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item1">
-                    <center><img onmouseover="SUV(1)" onmouseout="SUV(0)" id="suv1" src="suv1.png" style="width:590px; height: 370px;"></center>
+                    <center><img onmouseover="SUV(1)" onmouseout="SUV(0)" id="suv1" src="./fotos/suv1.png" style="width:590px; height: 370px;"></center>
                 </div>
                 <input class="slide-open1" type="radio" id="slide-21" 
                       name="slide1" aria-hidden="true" hidden="">
                 <div class="slide-item1">
-                    <center><img onmouseover="SUV(2)" onmouseout="SUV(0)" id="suv2" src="suv2.png" style="width:555px; height: 350px;"></center>
+                    <center><img onmouseover="SUV(2)" onmouseout="SUV(0)" id="suv2" src="./fotos/suv2.png" style="width:555px; height: 350px;"></center>
                 </div>
                 <input class="slide-open1" type="radio" id="slide-31" 
                       name="slide1" aria-hidden="true" hidden="">
                 <div class="slide-item1">
-                    <center><img onmouseover="SUV(3)" onmouseout="SUV(0)" id="suv3" src="suv3.png" style="width:600px; height: 350px;"></center>
+                    <center><img onmouseover="SUV(3)" onmouseout="SUV(0)" id="suv3" src="./fotos/suv3.png" style="width:600px; height: 350px;"></center>
                 </div>
                 <br>
 
@@ -249,17 +249,17 @@
                 <input class="slide-open2" type="radio" id="slide-12" 
                       name="slide2" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item2">
-                    <center><img onmouseover="Coupe(1)" onmouseout="Coupe(0)" id="coupe1" src="coupe1.png" style="width:590px; height: 370px;"></center>
+                    <center><img onmouseover="Coupe(1)" onmouseout="Coupe(0)" id="coupe1" src="./fotos/coupe1.png" style="width:590px; height: 370px;"></center>
                 </div>
                 <input class="slide-open2" type="radio" id="slide-22" 
                       name="slide2" aria-hidden="true" hidden="">
                 <div class="slide-item2">
-                    <center><img onmouseover="Coupe(2)" onmouseout="Coupe(0)" id="coupe2" src="coupe2.png" style="width:555px; height: 350px;"></center>
+                    <center><img onmouseover="Coupe(2)" onmouseout="Coupe(0)" id="coupe2" src="./fotos/coupe2.png" style="width:555px; height: 350px;"></center>
                 </div>
                 <input class="slide-open2" type="radio" id="slide-32" 
                       name="slide2" aria-hidden="true" hidden="">
                 <div class="slide-item2">
-                    <center><img onmouseover="Coupe(3)" onmouseout="Coupe(0)" id="coupe3" src="coupe3.png" style="width:600px; height: 350px;"></center>
+                    <center><img onmouseover="Coupe(3)" onmouseout="Coupe(0)" id="coupe3" src="./fotos/coupe3.png" style="width:600px; height: 350px;"></center>
                 </div>
                 <br>
 
@@ -292,17 +292,17 @@
                 <input class="slide-open3" type="radio" id="slide-13" 
                       name="slide3" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item3">
-                    <center><img onmouseover="Cabrio(1)" onmouseout="Cabrio(0)" id="cabrio1" src="cabrio1.png" style="width:590px; height: 370px;"></center>
+                    <center><img onmouseover="Cabrio(1)" onmouseout="Cabrio(0)" id="cabrio1" src="./fotos/cabrio1.png" style="width:590px; height: 370px;"></center>
                 </div>
                 <input class="slide-open3" type="radio" id="slide-23" 
                       name="slide3" aria-hidden="true" hidden="">
                 <div class="slide-item3">
-                    <center><img onmouseover="Cabrio(2)" onmouseout="Cabrio(0)" id="cabrio2" src="cabrio2.png" style="width:555px; height: 350px;"></center>
+                    <center><img onmouseover="Cabrio(2)" onmouseout="Cabrio(0)" id="cabrio2" src="./fotos/cabrio2.png" style="width:555px; height: 350px;"></center>
                 </div>
                 <input class="slide-open3" type="radio" id="slide-33" 
                       name="slide3" aria-hidden="true" hidden="">
                 <div class="slide-item3">
-                    <center><img onmouseover="Cabrio(3)" onmouseout="Cabrio(0)" id="cabrio3" src="cabrio3.png" style="width:600px; height: 350px;"></center>
+                    <center><img onmouseover="Cabrio(3)" onmouseout="Cabrio(0)" id="cabrio3" src="./fotos/cabrio3.png" style="width:600px; height: 350px;"></center>
                 </div>
                 <br>
 
@@ -335,17 +335,17 @@
                 <input class="slide-open4" type="radio" id="slide-14" 
                       name="slide4" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item4">
-                    <center><img onmouseover="Especiales(1)" onmouseout="Especiales(0)" id="especiales1" src="especiales1.png" style="width:590px; height: 370px;"></center>
+                    <center><img onmouseover="Especiales(1)" onmouseout="Especiales(0)" id="especiales1" src="./fotos/especiales1.png" style="width:590px; height: 370px;"></center>
                 </div>
                 <input class="slide-open4" type="radio" id="slide-24" 
                       name="slide4" aria-hidden="true" hidden="">
                 <div class="slide-item4">
-                    <center><img onmouseover="Especiales(2)" onmouseout="Especiales(0)" id="especiales2" src="especiales2.png" style="width:555px; height: 350px;"></center>
+                    <center><img onmouseover="Especiales(2)" onmouseout="Especiales(0)" id="especiales2" src="./fotos/especiales2.png" style="width:555px; height: 350px;"></center>
                 </div>
                 <input class="slide-open4" type="radio" id="slide-34" 
                       name="slide4" aria-hidden="true" hidden="">
                 <div class="slide-item4">
-                    <center><img onmouseover="Especiales(3)" onmouseout="Especiales(0)" id="especiales3" src="especiales3.png" style="width:600px; height: 350px;"></center>
+                    <center><img onmouseover="Especiales(3)" onmouseout="Especiales(0)" id="especiales3" src="./fotos/especiales3.png" style="width:600px; height: 350px;"></center>
                 </div>
                 <br>
 
@@ -379,13 +379,13 @@
     <div id="carrusel-contenido">
             <div id="carrusel-caja">
                 <div class="carrusel-elemento">
-                    <img class="imagenes imgjuntas1" src="aleron1.png" >
+                    <img class="imagenes imgjuntas1" src="./fotos/aleron1.png" >
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes imgjuntas1" src="aleron2.png">
+                    <img class="imagenes imgjuntas1" src="./fotos/aleron2.png">
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes imgjuntas" src="aleron3.png">                        
+                    <img class="imagenes imgjuntas" src="./fotos/aleron3.png">                        
                 </div>
             </div>
         </div>
@@ -395,13 +395,13 @@
     <div id="carrusel-contenido">
             <div id="carrusel-caja">
                 <div class="carrusel-elemento">
-                    <img class="imagenes imgjuntas" src="ruedas1.png" >
+                    <img class="imagenes imgjuntas" src="./fotos/ruedas1.png" >
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes imgjuntas" src="ruedas2.png">
+                    <img class="imagenes imgjuntas" src="./fotos/ruedas2.png">
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes imgjuntas" src="ruedas3.png">                        
+                    <img class="imagenes imgjuntas" src="./fotos/ruedas3.png">                        
                 </div>
             </div>
         </div>
@@ -411,13 +411,13 @@
     <div id="carrusel-contenido">
             <div id="carrusel-caja">
                 <div class="carrusel-elemento">
-                    <img class="imagenes faros" src="faros1.png" >
+                    <img class="imagenes faros" src="./fotos/faros1.png" >
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes faros" src="faros2.png">
+                    <img class="imagenes faros" src="./fotos/faros2.png">
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes faros" src="faros5.png">                        
+                    <img class="imagenes faros" src="./fotos/faros5.png">                        
                 </div>
             </div>
         </div>
@@ -426,13 +426,13 @@
     <div id="carrusel-contenido">
             <div id="carrusel-caja">
                 <div class="carrusel-elemento">   
-                    <img class="imagenes faros" src="farostras1.png">                        
+                    <img class="imagenes faros" src="./fotos/farostras1.png">                        
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes faros" src="farostras2.png">                        
+                    <img class="imagenes faros" src="./fotos/farostras2.png">                        
                 </div>
                 <div class="carrusel-elemento">   
-                    <img class="imagenes faros" src="farostras3.png">                        
+                    <img class="imagenes faros" src="./fotos/farostras3.png">                        
                 </div>
             </div>
         </div>
@@ -561,7 +561,7 @@
 </main>
 
     <div class="aviso-cookies" id="aviso-cookies">
-        <img class="galleta" src="cookie.png" alt="Galleta">
+        <img class="galleta" src="./fotos/cookie.png" alt="Galleta">
         <h3 class="titulo">Cookies</h3>
         <p class="parrafo">Utilizamos cookies propias y de terceros para mejorar nuestros servicios.</p>
         <button class="boton" id="btn-aceptar-cookies">De acuerdo</button>
