--- a/webdescripcion.html
+++ b/webdescripcion.html
@@ -17,7 +17,7 @@
 
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="hoja estilo.css">
-	<link rel="shorcut icon" href="SINFONDO.ICO">
+	<link rel="shorcut icon" href="./fotos/SINFONDO.ICO">
 	<title>DESCRIPCIÓN</title>
 </head>
 <body id="dos">
@@ -25,7 +25,7 @@
 	<div id="fixedtexto"><a onclick="restart()" id="fixedtexto" href="principal.html">Volver a la página prncipal</a>
 	</div>
 	<div id="header">
-		<img id="icon" src="SINFONDO.ico"><img id="icon2" src="colabo.png"> <strong><p id="titledesc"> DESCRIPCION DE LA PAGINA </p></strong> 
+		<img id="icon" src="./fotos/SINFONDO.ico"><img id="icon2" src="./fotos/colabo.png"> <strong><p id="titledesc"> DESCRIPCION DE LA PAGINA </p></strong> 
 	</div>
 	
 	<div id="texto">
@@ -41,10 +41,10 @@
 
 		Estos son los logos que ha lucido la marca española a lo largo de su historia:<br><br>
 		<center>
-			<img src="MERCEDES CUSTOM.png" style="width: 120px; height: 120px;"><br><br>Enero - 2023<br><br>
-			<img src="prop3.final.png" style="width: 120px; height: 120px;"><br><br>Principios de Febrero - 2023<br><br>
+			<img src="./fotos/MERCEDES CUSTOM.png" style="width: 120px; height: 120px;"><br><br>Enero - 2023<br><br>
+			<img src="./fotos/prop3.final.png" style="width: 120px; height: 120px;"><br><br>Principios de Febrero - 2023<br><br>
 			Finalmente el <strong>logo</strong> seleccionado por la empresa:<br><br>
-			<img src="mercedescustom.ico" style="width: 120px; height: 120px;"><br><br>Mediados de Febrero - 2023
+			<img src="./fotos/mercedescustom.ico" style="width: 120px; height: 120px;"><br><br>Mediados de Febrero - 2023
 		</center>
 
 		<br>
