modified-paht-tracking

--- a/principal.html
+++ b/principal.html
@@ -146,7 +146,7 @@
             <li><a href="#foto">Novedades</a></li>
             
             <li style="float: right"><a href="https://www.mercedes-benz.es">Link a la página oficial</a></li>
-            <li style="float: right"><a href="webdescripcion.html">Descripción de la página</a></li>
+            <li style="float: right"><a href="./secondary/webdescripcion.html">Descripción de la página</a></li>
             <li style="float: right"><a href="#Política">Política de Privacidad</a></li>
               
       </ul>
