--- a/secondary/webdescripcion.html
+++ b/secondary/webdescripcion.html
@@ -16,16 +16,16 @@
 	</script>
 
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="hoja estilo.css">
-	<link rel="shorcut icon" href="./fotos/SINFONDO.ICO">
+	<link rel="stylesheet" type="text/css" href="../hoja estilo.css"">
+	<link rel="shorcut icon" href="../fotos/SINFONDO.ICO">
 	<title>DESCRIPCIÓN</title>
 </head>
 <body id="dos">
 <div id="total">	
-	<div id="fixedtexto"><a onclick="restart()" id="fixedtexto" href="principal.html">Volver a la página prncipal</a>
+	<div id="fixedtexto"><a onclick="restart()" id="fixedtexto" href="../principal.html">Volver a la página prncipal</a>
 	</div>
 	<div id="header">
-		<img id="icon" src="./fotos/SINFONDO.ico"><img id="icon2" src="./fotos/colabo.png"> <strong><p id="titledesc"> DESCRIPCION DE LA PAGINA </p></strong> 
+		<img id="icon" src="../fotos/SINFONDO.ico"><img id="icon2" src="../fotos/colabo.png"> <strong><p id="titledesc"> DESCRIPCION DE LA PAGINA </p></strong> 
 	</div>
 	
 	<div id="texto">
@@ -41,10 +41,10 @@
 
 		Estos son los logos que ha lucido la marca española a lo largo de su historia:<br><br>
 		<center>
-			<img src="./fotos/MERCEDES CUSTOM.png" style="width: 120px; height: 120px;"><br><br>Enero - 2023<br><br>
-			<img src="./fotos/prop3.final.png" style="width: 120px; height: 120px;"><br><br>Principios de Febrero - 2023<br><br>
+			<img src="../fotos/MERCEDES CUSTOM.png" style="width: 120px; height: 120px;"><br><br>Enero - 2023<br><br>
+			<img src="../fotos/prop3.final.png" style="width: 120px; height: 120px;"><br><br>Principios de Febrero - 2023<br><br>
 			Finalmente el <strong>logo</strong> seleccionado por la empresa:<br><br>
-			<img src="./fotos/mercedescustom.ico" style="width: 120px; height: 120px;"><br><br>Mediados de Febrero - 2023
+			<img src="../fotos/mercedescustom.ico" style="width: 120px; height: 120px;"><br><br>Mediados de Febrero - 2023
 		</center>
 
 		<br>
@@ -68,11 +68,11 @@
 			Las cookies son un conjunto de datos que un servidor deposita en el navegador del usuario para recoger la información de registro estándar de Internet y la información del comportamiento de los visitantes en un sitio web. Es decir, se trata de pequeños archivos de texto que quedan almacenados en el disco duro del ordenador y que sirven para identificar al usuario cuando se conecta nuevamente al sitio web. Su objetivo es registrar la visita del usuario y guardar cierta información. Su uso es común y frecuente en la web ya que permite a las páginas funcionar de manera más eficiente y conseguir una mayor personalización y análisis sobre el comportamiento del usuario.
 
 			<h3>Para saber más sobre las cookies</h3>
-			Puede obtener más información sobre la publicidad online basada en el comportamiento y la privacidad online en el siguiente enlace: http://www.youronlinechoices.com/es/
+			Puede obtener más información sobre la publicidad online basada en el comportamiento y la privacidad online en el siguiente enlace:a <a href="http://www.youronlinechoices.com/es/">http://www.youronlinechoices.com/es/</a> 
 
-			Protección de datos de Google Analytics: http://www.google.com/analytics/learn/privacy.html
+			Protección de datos de Google Analytics: <a href="http://www.google.com/analytics/learn/privacy.html">http://www.google.com/analytics/learn/privacy.html</a> 
 
-			Cómo usa Google Analytics las cookies: https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage?hl=es#analyticsjs
+			Cómo usa Google Analytics las cookies: <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage?hl=es#analyticsjs">https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage?hl=es#analyticsjs</a>
 
 			<h3>Actualizaciones y cambios en la política de privacidad/cookies</h3>
 			Las webs de Eduardo Serrano & Pablo Serrano pueden modificar esta Política de Cookies en función de exigencias legislativas, reglamentarias, o con la finalidad de adaptar dicha política a las instrucciones dictadas por la Agencia Española de Protección de Datos, por ello se aconseja a los usuarios que la visiten periódicamente.
