solved-conflict with doc names

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>The Mercedes Custom Company</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" type="text/css" href=".\hoja estilo.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
         <link rel="shortcut icon" href="./fotos/SINFONDO.ico">
         <meta charset="utf-8">
         <meta charset="UTF-8">
