--- a/secondary/webdescripcion.html
+++ b/secondary/webdescripcion.html
@@ -16,13 +16,13 @@
 	</script>
 
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../hoja estilo.css"">
+	<link rel="stylesheet" type="text/css" href="../style.css"">
 	<link rel="shorcut icon" href="../fotos/SINFONDO.ICO">
 	<title>DESCRIPCIÓN</title>
 </head>
 <body id="dos">
 <div id="total">	
-	<div id="fixedtexto"><a onclick="restart()" id="fixedtexto" href="../principal.html">Volver a la página prncipal</a>
+	<div id="fixedtexto"><a onclick="restart()" id="fixedtexto" href="../index.html">Volver a la página prncipal</a>
 	</div>
 	<div id="header">
 		<img id="icon" src="../fotos/SINFONDO.ico"><img id="icon2" src="../fotos/colabo.png"> <strong><p id="titledesc"> DESCRIPCION DE LA PAGINA </p></strong> 
